--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <main>
         <section id="Login">
             <div id="Imagem">
-
+                <!-- Imagem -->
             </div>
             <div id="Formulario">
                 <h1>Login</h1>
-                <p>Seja bem vindo(a) novmaente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.python" method="post"></form>
             </div>
         </section>
