--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilos/style.css" media="screen and (max-width: 768px)">
-    <link rel="stylesheet" href="estilos/tablet.css" media="screen and (min-width:768px)">
-    <link rel="stylesheet" href="estilos/desktop.css" media="screen and (min-width: 992px)">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/tablet.css" media="screen and (min-width:768px) and (max-width: 991px)">
+    <link rel="stylesheet" href="estilos/desktop.css" media="screen and (min-width: 992px) and (max-width: 1200px)">
     <link rel="stylesheet" href="estilos/large_device.css" media="screen and (min-width: 1200px)">
 </head>
 <body>
