Concertando erros do HTML e re-estruturando o CSS

--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/tablet.css" media="screen and (min-width:768px) and (max-width: 991px)">
-    <link rel="stylesheet" href="estilos/desktop.css" media="screen and (min-width: 992px) and (max-width: 1200px)">
-    <link rel="stylesheet" href="estilos/large_device.css" media="screen and (min-width: 1200px)">
+    <link rel="stylesheet" href="estilos/Little_devices.css" media="screen and (min-width:600px)">
+
+    <link rel="stylesheet" href="estilos/medium_devices.css" media="screen and (min-width:768px)">
+
+    <link rel="stylesheet" href="estilos/large_device.css" media="screen and (min-width:992px)">
+
+    <link rel="stylesheet" href="estilos/hyper-large_device.css" media="screen and (min-width:1200px)">
 </head>
 <body>
     <main>
-        <section id="Login">
-            <div id="Imagem">
+        <section id="login">
+            <div id="img">
                 <!-- Imagem -->
             </div>
-            <div id="Formulario">
+            <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.python" method="post"></form>
+                <form action="login.python" method="post">
+                    
+                </form>
             </div>
         </section>
     </main>
