--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/Little_devices.css" media="screen and (min-width:600px)">
 
     <link rel="stylesheet" href="estilos/medium_devices.css" media="screen and (min-width:768px)">
@@ -22,7 +24,7 @@
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.python" method="post">
-                    
+
                 </form>
             </div>
         </section>
