--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/Little_devices.css" media="screen and (min-width:600px)">
+    <link rel="stylesheet" href="estilos/Little_devices.css" media="screen and (max-width:767px)">
 
     <link rel="stylesheet" href="estilos/medium_devices.css" media="screen and (min-width:768px)">
 
