--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="estilos/large_device.css" media="screen and (min-width:992px)">
 
     <link rel="stylesheet" href="estilos/hyper-large_device.css" media="screen and (min-width:1200px)">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
@@ -22,10 +24,28 @@
                 <!-- Imagem -->
             </div>
             <div id="form">
-                <h1>Login</h1>
+                <h1>Login <span class="material-symbols-outlined">pentagon</span></h1>
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.python" method="post">
-
+                <form action="login.python" method="post" autocomplete="off">
+                    <div class="campo">
+                        <label for="iemail">Email</label>
+                        <br>
+                        <input type="email" name="login" id="iemail" autocomplete="on"
+                        required maxlength="30"
+                        minlength="11">
+                    </div>
+                    <div class="campo">
+                        <label for="Ipassword">Password</label>
+                        <br>
+                        <input type="password" name="password" id="Ipassword"
+                        required
+                        maxlength="16"
+                        minlength="8">
+                    </div>
+                    <div id="Options_Form">
+                        <input type="submit" value=" Login ">
+                        <input type="button" value=" Esqueci a senha ">
+                    </div>
                 </form>
             </div>
         </section>
